[package]
name = "gensokyo-chen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tokio-tungstenite = "0.24.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"
futures-util = "0.3.30"
gethostname = "0.5.0"
